kubernetes/gitea/gitea-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitea-repo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea-repo
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: gitea/gitea:latest
        ports:
        - containerPort: 3000
          name: gitea
        - containerPort: 22
          name: git-ssh
        volumeMounts:
        - mountPath: /data
          name: git-data
      volumes:
      - name: git-data
        persistentVolumeClaim:
          claimName: git-pvc
